hphp/hack/test/typecheck/reified_generics/soft_reified_within_function.php.like_types.exp
File "soft_reified_within_function.php", line 16, characters 7-11:
Soft reified generics can only be used in type hints because they do not exist at runtime. (Typing[4124])
File "soft_reified_within_function.php", line 19, characters 3-7:
Soft reified generics can only be used in type hints because they do not exist at runtime. (Typing[4124])
File "soft_reified_within_function.php", line 10, characters 46-50:
The type parameter Tsoft has the <<__Newable>> attribute. Newable type parameters must be constrained with `as`, and exactly one of those constraints must be a valid newable class. The class must either be final, or it must have the <<__ConsistentConstruct>> attribute or extend a class that has it. No constraints are valid newable classes (Typing[4308])
File "soft_reified_within_function.php", line 13, characters 8-12:
Invalid "as" expression hint (Typing[4195])
File "soft_reified_within_function.php", line 13, characters 8-12:
The "as" operator cannot be used with a soft reified generic type parameter
